--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.App{
+  min-height: 50vh;
+  max-width: 60%;
+  background-color: white;
+  margin: auto;
+  margin-top: 3rem;
+  box-shadow: 5px 5px 8px 10px #e0dddd;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.faq{
   display: flex;
   flex-direction: column;
+  padding: .5rem;
+}
+
+.i-faq{
+  padding: 1rem 0;
+}
+
+.faq-header{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  font-weight: bolder;
 }
 
-.App-link {
-  color: #61dafb;
+.faq-body{
+  margin-top: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.faq-footer{
+  margin-top: 1rem;
+  font-weight: bold;
+}
+
+.hide{
+  display: none;
+}
+
+.show{
+  display: block;
 }
